--- a/index.html
+++ b/index.html
@@ -4,76 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>效率工具箱</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-        }
-
-        body {
-            background-color: #f5f5f5;
-            padding: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 2rem;
-            font-weight: 300;
-        }
-
-        .category {
-            background: white;
-            border-radius: 10px;
-            padding: 1.5rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            color: #666;
-            margin-bottom: 1rem;
-            font-size: 1.2rem;
-            border-left: 4px solid #007bff;
-            padding-left: 0.8rem;
-        }
-
-        .link-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-        }
-
-        a {
-            display: block;
-            padding: 1rem;
-            background-color: #f8f9fa;
-            border-radius: 6px;
-            text-decoration: none;
-            color: #333;
-            transition: all 0.2s ease;
-        }
-
-        a:hover {
-            background-color: #e9ecef;
-            transform: translateY(-2px);
-            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 1rem;
-            }
-            
-            .link-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>效率工具箱</h1>
@@ -82,16 +13,21 @@
         <h2>AI 工具</h2>
         <div class="link-grid">
             <a href="https://chat.openai.com" target="_blank">ChatGPT</a>
-            <a href="https://www.deepseek.com" target="_blank">DeepSeek</a>
+            <a href="https://chat.deepseek.com/" target="_blank">DeepSeek</a>
             <a href="https://claude.ai" target="_blank">Claude</a>
-            <a href="https://gemini.google.com" target="_blank">Google Gemini</a>
+            <a href="https://chatglm.cn/" target="_blank">智谱</a>
+            <a href="https://tongyi.aliyun.com/" target="_blank">通义</a>
+            <a href="https://grok.com/" target="_blank">grok</a>
         </div>
     </div>
 
     <div class="category">
         <h2>编程练习</h2>
         <div class="link-grid">
-            <a href="https://leetcode.com" target="_blank">LeetCode</a>
+            <div class="link-pair">
+                <a href="https://leetcode.com" target="_blank">LeetCode (EN)</a>
+                <a href="https://leetcode.cn" target="_blank">LeetCode (CN)</a>
+            </div>
             <a href="https://www.kaggle.com" target="_blank">Kaggle</a>
             <a href="https://www.codewars.com" target="_blank">Codewars</a>
             <a href="https://exercism.org" target="_blank">Exercism</a>
@@ -102,8 +38,8 @@
         <h2>学术资源</h2>
         <div class="link-grid">
             <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-            <a href="https://www.semanticscholar.org" target="_blank">Semantic Scholar</a>
             <a href="https://arxiv.org" target="_blank">arXiv</a>
+            <a href="https://www.semanticscholar.org" target="_blank">Semantic Scholar</a>
             <a href="https://www.researchgate.net" target="_blank">ResearchGate</a>
         </div>
     </div>
@@ -112,10 +48,11 @@
         <h2>开发工具</h2>
         <div class="link-grid">
             <a href="https://github.com" target="_blank">GitHub</a>
-            <a href="https://gitlab.com" target="_blank">GitLab</a>
+            <a href="https://gitee.com/" target="_blank">Gitee</a>
             <a href="https://stackoverflow.com" target="_blank">Stack Overflow</a>
             <a href="https://www.docker.com" target="_blank">Docker</a>
         </div>
     </div>
 </body>
 </html>
+
