--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <a href="https://arxiv.org" target="_blank">arXiv</a>
             <a href="https://www.semanticscholar.org" target="_blank">Semantic Scholar</a>
             <a href="https://www.researchgate.net" target="_blank">ResearchGate</a>
+            <a href="https://huggingface.co/" target="_blank">HuggingFace</a>
+            <a href="https://paperswithcode.com/" target="_blank">Paper With Code</a>
         </div>
     </div>
 
