--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <a href="https://www.douyin.com/" target="_blank">抖音</a>
         </div>
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
