--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         <h2>AI 工具</h2>
         <div class="link-grid">
             <a href="https://chat.openai.com" target="_blank">ChatGPT</a>
-            <a href="https://chat.deepseek.com/" target="_blank">DeepSeek</a>
-            <a href="https://claude.ai" target="_blank">Claude</a>
-            <a href="https://chatglm.cn/" target="_blank">智谱</a>
-            <a href="https://tongyi.aliyun.com/" target="_blank">通义</a>
+            <a href="https://gemini.google.com" target="_blank">Gemini</a>
             <a href="https://grok.com/" target="_blank">Grok</a>
-            <a href="https://cloud.siliconflow.cn/models" target="_blank">硅基流动</a>
+            <a href="https://claude.ai" target="_blank">Claude</a>
+            <a href="https://tongyi.aliyun.com/" target="_blank">通义Qwen</a>
+            <a href="https://chat.deepseek.com/" target="_blank">DeepSeek</a>
+            <a href="https://chatglm.cn/" target="_blank">智谱GLM</a>
+            <a href="https://cloud.siliconflow.cn/models" target="_blank">硅基流动API</a>
         </div>
     </div>
 
