--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HH的工具箱</title>
+    <title>牛马工具箱</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>HH的工具箱</h1>
+    <h1>牛马工具箱</h1>
 
     <div class="category">
         <h2>搜索引擎</h2>
@@ -32,6 +32,7 @@
             <a href="https://tongyi.aliyun.com/" target="_blank">通义Qwen</a>
             <a href="https://chat.deepseek.com/" target="_blank">DeepSeek</a>
             <a href="https://chatglm.cn/" target="_blank">智谱GLM</a>
+            <a href="https://www.doubao.com/" target="_blank">豆包</a>
             <a href="https://cloud.siliconflow.cn/models" target="_blank">硅基流动API</a>
         </div>
     </div>
