--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>牛马工具箱</title>
+    <title>薯片的工具箱</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>牛马工具箱</h1>
+    <h1>薯片的工具箱</h1>
 
     <div class="category">
         <h2>搜索引擎</h2>
